[ LaTeX backend ] Made (some of) the generated tables smaller.

--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.tex
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.tex
@@ -5,8 +5,8 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[0I]%
-\>[0I]\AgdaModule{AccidentalSpacesAfterBeginCode}\<[1I]%
+\>[0]\AgdaKeyword{module}%
+\>[0I]\AgdaModule{AccidentalSpacesAfterBeginCode}%
 \>[1I]\AgdaKeyword{where}\<%
 \end{code}
 
