--- a/test/LaTeXAndHTML/succeed/Issue1053.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1053.tex
@@ -3,44 +3,44 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaFunction{id}\<[0I]%
-\>[0I]\AgdaSymbol{:}\<[1I]%
-\>[1I]\AgdaSymbol{\{}\AgdaBound{A}\<[2I]%
-\>[2I]\AgdaSymbol{:}\<[3I]%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<[4I]%
-\>[4I]\AgdaSymbol{→}\<[5I]%
-\>[5I]\AgdaBound{A}\<[6I]%
-\>[6I]\AgdaSymbol{→}\<[7I]%
+\>[0]\AgdaFunction{id}%
+\>[0I]\AgdaSymbol{:}%
+\>[1I]\AgdaSymbol{\{}\AgdaBound{A}%
+\>[2I]\AgdaSymbol{:}%
+\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[4I]\AgdaSymbol{→}%
+\>[5I]\AgdaBound{A}%
+\>[6I]\AgdaSymbol{→}%
 \>[7I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{id}\<[8I]%
-\>[8I]\AgdaSymbol{\{}\AgdaArgument{A}\<[9I]%
-\>[9I]\AgdaSymbol{=}\<[10I]%
-\>[10I]\AgdaBound{A}\AgdaSymbol{\}}\<[11I]%
-\>[11I]\AgdaBound{x}\<[12I]%
-\>[12I]\AgdaSymbol{=}\<[13I]%
+\>[0]\AgdaFunction{id}%
+\>[8I]\AgdaSymbol{\{}\AgdaArgument{A}%
+\>[9I]\AgdaSymbol{=}%
+\>[10I]\AgdaBound{A}\AgdaSymbol{\}}%
+\>[11I]\AgdaBound{x}%
+\>[12I]\AgdaSymbol{=}%
 \>[13I]\AgdaBound{x}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{foo}\<[14I]%
-\>[14I]\AgdaSymbol{:}\<[15I]%
-\>[15I]\AgdaSymbol{(}\AgdaBound{A}\<[16I]%
-\>[16I]\AgdaSymbol{:}\<[17I]%
-\>[17I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[18I]%
-\>[18I]\AgdaSymbol{→}\<[19I]%
-\>[19I]\AgdaBound{A}\<[20I]%
-\>[20I]\AgdaSymbol{→}\<[21I]%
+\>[0]\AgdaFunction{foo}%
+\>[14I]\AgdaSymbol{:}%
+\>[15I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[16I]\AgdaSymbol{:}%
+\>[17I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[18I]\AgdaSymbol{→}%
+\>[19I]\AgdaBound{A}%
+\>[20I]\AgdaSymbol{→}%
 \>[21I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{foo}\<[22I]%
-\>[22I]\AgdaBound{B}\<[23I]%
-\>[23I]\AgdaBound{x}\<[24I]%
-\>[24I]\AgdaSymbol{=}\<[25I]%
-\>[25I]\AgdaFunction{id}\<[26I]%
-\>[26I]\AgdaSymbol{\{}\AgdaArgument{A}\<[27I]%
-\>[27I]\AgdaSymbol{=}\<[28I]%
-\>[28I]\AgdaBound{B}\AgdaSymbol{\}}\<[29I]%
+\>[0]\AgdaFunction{foo}%
+\>[22I]\AgdaBound{B}%
+\>[23I]\AgdaBound{x}%
+\>[24I]\AgdaSymbol{=}%
+\>[25I]\AgdaFunction{id}%
+\>[26I]\AgdaSymbol{\{}\AgdaArgument{A}%
+\>[27I]\AgdaSymbol{=}%
+\>[28I]\AgdaBound{B}\AgdaSymbol{\}}%
 \>[29I]\AgdaBound{x}\<%
 \end{code}
 
