--- a/test/LaTeXAndHTML/succeed/Issue1062.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1062.tex
@@ -7,91 +7,91 @@
 \begin{code}%
 \>[0]\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}\<[0I]%
-\>[0I]\AgdaKeyword{OPTIONS}\<[1I]%
-\>[1I]\AgdaOption{{-}{-}copatterns}\<[2I]%
-\>[2I]\AgdaOption{{-}{-}sized{-}types}\<[3I]%
+\>[0]\AgdaSymbol{\{{-}\#}%
+\>[0I]\AgdaKeyword{OPTIONS}%
+\>[1I]\AgdaOption{{-}{-}copatterns}%
+\>[2I]\AgdaOption{{-}{-}sized{-}types}%
 \>[3I]\AgdaSymbol{\#{-}\}}\<%
 \\
 %
 \\
-\>[0]\AgdaSymbol{\{{-}\#}\<[4I]%
-\>[4I]\AgdaKeyword{BUILTIN} SIZE    \AgdaPostulate{Size}\<[27]%
+\>[0]\AgdaSymbol{\{{-}\#}%
+\>[4I]\AgdaKeyword{BUILTIN} SIZE    \AgdaPostulate{Size}%
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}\<[5I]%
-\>[5I]\AgdaKeyword{BUILTIN} SIZELT  \AgdaPostulate{Size<\_}\<[6I]%
+\>[0]\AgdaSymbol{\{{-}\#}%
+\>[5I]\AgdaKeyword{BUILTIN} SIZELT  \AgdaPostulate{Size<\_}%
 \>[6I]\AgdaSymbol{\#{-}\}}\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}\<[7I]%
-\>[7I]\AgdaKeyword{BUILTIN} SIZESUC \AgdaPostulate{↑\_}\<[27]%
+\>[0]\AgdaSymbol{\{{-}\#}%
+\>[7I]\AgdaKeyword{BUILTIN} SIZESUC \AgdaPostulate{↑\_}%
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}\<[8I]%
-\>[8I]\AgdaKeyword{BUILTIN} SIZEINF \AgdaPostulate{∞}\<[27]%
+\>[0]\AgdaSymbol{\{{-}\#}%
+\>[8I]\AgdaKeyword{BUILTIN} SIZEINF \AgdaPostulate{∞}%
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}\<[9I]%
-\>[9I]\AgdaDatatype{List}\<[10I]%
-\>[10I]\AgdaSymbol{(}\AgdaBound{A}\<[11I]%
-\>[11I]\AgdaSymbol{:}\<[12I]%
-\>[12I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[13I]%
-\>[13I]\AgdaSymbol{:}\<[14I]%
-\>[14I]\AgdaPrimitiveType{Set}\<[15I]%
+\>[0]\AgdaKeyword{data}%
+\>[9I]\AgdaDatatype{List}%
+\>[10I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[11I]\AgdaSymbol{:}%
+\>[12I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[13I]\AgdaSymbol{:}%
+\>[14I]\AgdaPrimitiveType{Set}%
 \>[15I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{[]}\<[16I]%
-\>[16I]\AgdaSymbol{:}\<[17I]%
-\>[17I]\AgdaDatatype{List}\<[18I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{[]}%
+\>[16I]\AgdaSymbol{:}%
+\>[17I]\AgdaDatatype{List}%
 \>[18I]\AgdaBound{A}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{\_∷\_}\<[19I]%
-\>[19I]\AgdaSymbol{:}\<[20I]%
-\>[20I]\AgdaSymbol{(}\AgdaBound{x}\<[21I]%
-\>[21I]\AgdaSymbol{:}\<[22I]%
-\>[22I]\AgdaBound{A}\AgdaSymbol{)}\<[23I]%
-\>[23I]\AgdaSymbol{(}\AgdaBound{xs}\<[24I]%
-\>[24I]\AgdaSymbol{:}\<[25I]%
-\>[25I]\AgdaDatatype{List}\<[26I]%
-\>[26I]\AgdaBound{A}\AgdaSymbol{)}\<[27I]%
-\>[27I]\AgdaSymbol{{-}>}\<[28I]%
-\>[28I]\AgdaDatatype{List}\<[29I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{\_∷\_}%
+\>[19I]\AgdaSymbol{:}%
+\>[20I]\AgdaSymbol{(}\AgdaBound{x}%
+\>[21I]\AgdaSymbol{:}%
+\>[22I]\AgdaBound{A}\AgdaSymbol{)}%
+\>[23I]\AgdaSymbol{(}\AgdaBound{xs}%
+\>[24I]\AgdaSymbol{:}%
+\>[25I]\AgdaDatatype{List}%
+\>[26I]\AgdaBound{A}\AgdaSymbol{)}%
+\>[27I]\AgdaSymbol{{-}>}%
+\>[28I]\AgdaDatatype{List}%
 \>[29I]\AgdaBound{A}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}\<[30I]%
-\>[30I]\AgdaRecord{\_×\_}\<[31I]%
-\>[31I]\AgdaSymbol{(}\AgdaBound{A}\<[32I]%
-\>[32I]\AgdaBound{B}\<[33I]%
-\>[33I]\AgdaSymbol{:}\<[34I]%
-\>[34I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[35I]%
-\>[35I]\AgdaSymbol{:}\<[36I]%
-\>[36I]\AgdaPrimitiveType{Set}\<[37I]%
+\>[0]\AgdaKeyword{record}%
+\>[30I]\AgdaRecord{\_×\_}%
+\>[31I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[32I]\AgdaBound{B}%
+\>[33I]\AgdaSymbol{:}%
+\>[34I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[35I]\AgdaSymbol{:}%
+\>[36I]\AgdaPrimitiveType{Set}%
 \>[37I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{constructor}\<[38I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{constructor}%
 \>[38I]\AgdaInductiveConstructor{\_,\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{fst}\<[39I]%
-\>[39I]\AgdaSymbol{:}\<[40I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{fst}%
+\>[39I]\AgdaSymbol{:}%
 \>[40I]\AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{snd}\<[41I]%
-\>[41I]\AgdaSymbol{:}\<[42I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{snd}%
+\>[41I]\AgdaSymbol{:}%
 \>[42I]\AgdaBound{B}\<%
 \\
-\>[0]\AgdaKeyword{open}\<[43I]%
+\>[0]\AgdaKeyword{open}%
 \>[43I]\AgdaModule{\_×\_}\<%
 \\
 %
@@ -100,79 +100,79 @@
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}\<[44I]%
-\>[44I]\AgdaRecord{Stream}\<[45I]%
-\>[45I]\AgdaSymbol{\{}\AgdaBound{i}\<[46I]%
-\>[46I]\AgdaSymbol{:}\<[47I]%
-\>[47I]\AgdaPostulate{Size}\AgdaSymbol{\}}\<[48I]%
-\>[48I]\AgdaSymbol{(}\AgdaBound{A}\<[49I]%
-\>[49I]\AgdaSymbol{:}\<[50I]%
-\>[50I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[51I]%
-\>[51I]\AgdaSymbol{:}\<[52I]%
-\>[52I]\AgdaPrimitiveType{Set}\<[53I]%
+\>[0]\AgdaKeyword{record}%
+\>[44I]\AgdaRecord{Stream}%
+\>[45I]\AgdaSymbol{\{}\AgdaBound{i}%
+\>[46I]\AgdaSymbol{:}%
+\>[47I]\AgdaPostulate{Size}\AgdaSymbol{\}}%
+\>[48I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[49I]\AgdaSymbol{:}%
+\>[50I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[51I]\AgdaSymbol{:}%
+\>[52I]\AgdaPrimitiveType{Set}%
 \>[53I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{coinductive}\AgdaSymbol{;}\<[54I]%
-\>[54I]\AgdaKeyword{constructor}\<[55I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{coinductive}\AgdaSymbol{;}%
+\>[54I]\AgdaKeyword{constructor}%
 \>[55I]\AgdaCoinductiveConstructor{\_∷\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{head}\<[10]%
-\>[10]\AgdaSymbol{:}\<[56I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{head}%
+\>[10]\AgdaSymbol{:}%
 \>[56I]\AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{tail}\<[10]%
-\>[10]\AgdaSymbol{:}\<[57I]%
-\>[57I]\AgdaSymbol{∀}\<[58I]%
-\>[58I]\AgdaSymbol{\{}\AgdaBound{j}\<[59I]%
-\>[59I]\AgdaSymbol{:}\<[60I]%
-\>[60I]\AgdaPostulate{Size<}\<[61I]%
-\>[61I]\AgdaBound{i}\AgdaSymbol{\}}\<[62I]%
-\>[62I]\AgdaSymbol{→}\<[63I]%
-\>[63I]\AgdaRecord{Stream}\<[64I]%
-\>[64I]\AgdaSymbol{\{}\AgdaBound{j}\AgdaSymbol{\}}\<[65I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{tail}%
+\>[10]\AgdaSymbol{:}%
+\>[57I]\AgdaSymbol{∀}%
+\>[58I]\AgdaSymbol{\{}\AgdaBound{j}%
+\>[59I]\AgdaSymbol{:}%
+\>[60I]\AgdaPostulate{Size<}%
+\>[61I]\AgdaBound{i}\AgdaSymbol{\}}%
+\>[62I]\AgdaSymbol{→}%
+\>[63I]\AgdaRecord{Stream}%
+\>[64I]\AgdaSymbol{\{}\AgdaBound{j}\AgdaSymbol{\}}%
 \>[65I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaKeyword{open}\<[66I]%
-\>[66I]\AgdaModule{Stream}\<[67I]%
+\>[0]\AgdaKeyword{open}%
+\>[66I]\AgdaModule{Stream}%
 \>[67I]\AgdaKeyword{public}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{\_∷ˢ\_}\<[68I]%
-\>[68I]\AgdaSymbol{:}\<[69I]%
-\>[69I]\AgdaSymbol{∀}\<[70I]%
-\>[70I]\AgdaSymbol{\{}\AgdaBound{i}\<[71I]%
-\>[71I]\AgdaBound{A}\AgdaSymbol{\}}\<[72I]%
-\>[72I]\AgdaSymbol{→}\<[73I]%
-\>[73I]\AgdaBound{A}\<[74I]%
-\>[74I]\AgdaSymbol{→}\<[75I]%
-\>[75I]\AgdaRecord{Stream}\<[76I]%
-\>[76I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\<[77I]%
-\>[77I]\AgdaBound{A}\<[78I]%
-\>[78I]\AgdaSymbol{→}\<[79I]%
-\>[79I]\AgdaRecord{Stream}\<[80I]%
-\>[80I]\AgdaSymbol{\{}\AgdaPostulate{↑}\<[81I]%
-\>[81I]\AgdaBound{i}\AgdaSymbol{\}}\<[82I]%
+\>[0]\AgdaFunction{\_∷ˢ\_}%
+\>[68I]\AgdaSymbol{:}%
+\>[69I]\AgdaSymbol{∀}%
+\>[70I]\AgdaSymbol{\{}\AgdaBound{i}%
+\>[71I]\AgdaBound{A}\AgdaSymbol{\}}%
+\>[72I]\AgdaSymbol{→}%
+\>[73I]\AgdaBound{A}%
+\>[74I]\AgdaSymbol{→}%
+\>[75I]\AgdaRecord{Stream}%
+\>[76I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
+\>[77I]\AgdaBound{A}%
+\>[78I]\AgdaSymbol{→}%
+\>[79I]\AgdaRecord{Stream}%
+\>[80I]\AgdaSymbol{\{}\AgdaPostulate{↑}%
+\>[81I]\AgdaBound{i}\AgdaSymbol{\}}%
 \>[82I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaField{head}\<[6]%
-\>[6]\AgdaSymbol{(}\AgdaBound{a}\<[83I]%
-\>[83I]\AgdaFunction{∷ˢ}\<[84I]%
-\>[84I]\AgdaBound{as}\AgdaSymbol{)}\<[85I]%
-\>[85I]\AgdaSymbol{=}\<[86I]%
+\>[0]\AgdaField{head}%
+\>[6]\AgdaSymbol{(}\AgdaBound{a}%
+\>[83I]\AgdaFunction{∷ˢ}%
+\>[84I]\AgdaBound{as}\AgdaSymbol{)}%
+\>[85I]\AgdaSymbol{=}%
 \>[86I]\AgdaBound{a}\<%
 \\
-\>[0]\AgdaField{tail}\<[6]%
-\>[6]\AgdaSymbol{(}\AgdaBound{a}\<[87I]%
-\>[87I]\AgdaFunction{∷ˢ}\<[88I]%
-\>[88I]\AgdaBound{as}\AgdaSymbol{)}\<[89I]%
-\>[89I]\AgdaSymbol{=}\<[90I]%
+\>[0]\AgdaField{tail}%
+\>[6]\AgdaSymbol{(}\AgdaBound{a}%
+\>[87I]\AgdaFunction{∷ˢ}%
+\>[88I]\AgdaBound{as}\AgdaSymbol{)}%
+\>[89I]\AgdaSymbol{=}%
 \>[90I]\AgdaBound{as}\<%
 \\
 %
@@ -185,39 +185,39 @@
 \\
 %
 \\
-\>[0]\AgdaFunction{\_++ˢ\_}\<[91I]%
-\>[91I]\AgdaSymbol{:}\<[92I]%
-\>[92I]\AgdaSymbol{∀}\<[93I]%
-\>[93I]\AgdaSymbol{\{}\AgdaBound{i}\<[94I]%
-\>[94I]\AgdaBound{A}\AgdaSymbol{\}}\<[95I]%
-\>[95I]\AgdaSymbol{→}\<[96I]%
-\>[96I]\AgdaDatatype{List}\<[97I]%
-\>[97I]\AgdaBound{A}\<[98I]%
-\>[98I]\AgdaSymbol{→}\<[99I]%
-\>[99I]\AgdaRecord{Stream}\<[100I]%
-\>[100I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\<[101I]%
-\>[101I]\AgdaBound{A}\<[102I]%
-\>[102I]\AgdaSymbol{→}\<[103I]%
-\>[103I]\AgdaRecord{Stream}\<[104I]%
-\>[104I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\<[105I]%
+\>[0]\AgdaFunction{\_++ˢ\_}%
+\>[91I]\AgdaSymbol{:}%
+\>[92I]\AgdaSymbol{∀}%
+\>[93I]\AgdaSymbol{\{}\AgdaBound{i}%
+\>[94I]\AgdaBound{A}\AgdaSymbol{\}}%
+\>[95I]\AgdaSymbol{→}%
+\>[96I]\AgdaDatatype{List}%
+\>[97I]\AgdaBound{A}%
+\>[98I]\AgdaSymbol{→}%
+\>[99I]\AgdaRecord{Stream}%
+\>[100I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
+\>[101I]\AgdaBound{A}%
+\>[102I]\AgdaSymbol{→}%
+\>[103I]\AgdaRecord{Stream}%
+\>[104I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
 \>[105I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaInductiveConstructor{[]}\<[10]%
-\>[10]\AgdaFunction{++ˢ}\<[106I]%
-\>[106I]\AgdaBound{s}\<[107I]%
-\>[107I]\AgdaSymbol{=}\<[108I]%
+\>[0]\AgdaInductiveConstructor{[]}%
+\>[10]\AgdaFunction{++ˢ}%
+\>[106I]\AgdaBound{s}%
+\>[107I]\AgdaSymbol{=}%
 \>[108I]\AgdaBound{s}\<%
 \\
-\>[0]\AgdaSymbol{(}\AgdaBound{a}\<[109I]%
-\>[109I]\AgdaInductiveConstructor{∷}\<[110I]%
-\>[110I]\AgdaBound{as}\AgdaSymbol{)}\<[10]%
-\>[10]\AgdaFunction{++ˢ}\<[111I]%
-\>[111I]\AgdaBound{s}\<[112I]%
-\>[112I]\AgdaSymbol{=}\<[113I]%
-\>[113I]\AgdaBound{a}\<[114I]%
-\>[114I]\AgdaFunction{∷ˢ}\<[115I]%
-\>[115I]\AgdaSymbol{(}\AgdaBound{as}\<[116I]%
-\>[116I]\AgdaFunction{++ˢ}\<[117I]%
+\>[0]\AgdaSymbol{(}\AgdaBound{a}%
+\>[109I]\AgdaInductiveConstructor{∷}%
+\>[110I]\AgdaBound{as}\AgdaSymbol{)}%
+\>[10]\AgdaFunction{++ˢ}%
+\>[111I]\AgdaBound{s}%
+\>[112I]\AgdaSymbol{=}%
+\>[113I]\AgdaBound{a}%
+\>[114I]\AgdaFunction{∷ˢ}%
+\>[115I]\AgdaSymbol{(}\AgdaBound{as}%
+\>[116I]\AgdaFunction{++ˢ}%
 \>[117I]\AgdaBound{s}\AgdaSymbol{)}\<%
 \\
 %
@@ -226,144 +226,144 @@
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}\<[118I]%
-\>[118I]\AgdaRecord{List1}\<[119I]%
-\>[119I]\AgdaSymbol{(}\AgdaBound{A}\<[120I]%
-\>[120I]\AgdaSymbol{:}\<[121I]%
-\>[121I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[122I]%
-\>[122I]\AgdaSymbol{:}\<[123I]%
-\>[123I]\AgdaPrimitiveType{Set}\<[124I]%
+\>[0]\AgdaKeyword{record}%
+\>[118I]\AgdaRecord{List1}%
+\>[119I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[120I]\AgdaSymbol{:}%
+\>[121I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[122I]\AgdaSymbol{:}%
+\>[123I]\AgdaPrimitiveType{Set}%
 \>[124I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{constructor}\<[125I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{constructor}%
 \>[125I]\AgdaInductiveConstructor{\_∷\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{head}\<[10]%
-\>[10]\AgdaSymbol{:}\<[126I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{head}%
+\>[10]\AgdaSymbol{:}%
 \>[126I]\AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{tail}\<[10]%
-\>[10]\AgdaSymbol{:}\<[127I]%
-\>[127I]\AgdaDatatype{List}\<[128I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{tail}%
+\>[10]\AgdaSymbol{:}%
+\>[127I]\AgdaDatatype{List}%
 \>[128I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaKeyword{open}\<[129I]%
-\>[129I]\AgdaModule{List1}\<[130I]%
-\>[130I]\AgdaKeyword{using}\<[131I]%
-\>[131I]\AgdaSymbol{(}\AgdaField{head}\AgdaSymbol{;}\<[132I]%
+\>[0]\AgdaKeyword{open}%
+\>[129I]\AgdaModule{List1}%
+\>[130I]\AgdaKeyword{using}%
+\>[131I]\AgdaSymbol{(}\AgdaField{head}\AgdaSymbol{;}%
 \>[132I]\AgdaField{tail}\AgdaSymbol{)}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}\<[133I]%
-\>[133I]\AgdaRecord{⊤}\<[134I]%
-\>[134I]\AgdaSymbol{:}\<[135I]%
-\>[135I]\AgdaPrimitiveType{Set}\<[136I]%
-\>[136I]\AgdaKeyword{where}\<[137I]%
-\>[137I]\AgdaKeyword{constructor}\<[138I]%
+\>[0]\AgdaKeyword{record}%
+\>[133I]\AgdaRecord{⊤}%
+\>[134I]\AgdaSymbol{:}%
+\>[135I]\AgdaPrimitiveType{Set}%
+\>[136I]\AgdaKeyword{where}%
+\>[137I]\AgdaKeyword{constructor}%
 \>[138I]\AgdaInductiveConstructor{trivial}\<%
 \\
-\>[0]\AgdaKeyword{open}\<[139I]%
-\>[139I]\AgdaModule{List1}\<[140I]%
-\>[140I]\AgdaSymbol{(}\AgdaInductiveConstructor{trivial}\<[141I]%
-\>[141I]\AgdaInductiveConstructor{∷}\<[142I]%
-\>[142I]\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\<[143I]%
-\>[143I]\AgdaKeyword{using}\<[144I]%
-\>[144I]\AgdaSymbol{(}head\AgdaSymbol{;} tail\AgdaSymbol{)}\<[145I]%
+\>[0]\AgdaKeyword{open}%
+\>[139I]\AgdaModule{List1}%
+\>[140I]\AgdaSymbol{(}\AgdaInductiveConstructor{trivial}%
+\>[141I]\AgdaInductiveConstructor{∷}%
+\>[142I]\AgdaInductiveConstructor{[]}\AgdaSymbol{)}%
+\>[143I]\AgdaKeyword{using}%
+\>[144I]\AgdaSymbol{(}head\AgdaSymbol{;} tail\AgdaSymbol{)}%
 \>[145I]\AgdaComment{{-}{-} problem: imports not colored}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{unfold⁺}\<[146I]%
-\>[146I]\AgdaSymbol{:}\<[147I]%
-\>[147I]\AgdaSymbol{∀}\<[148I]%
-\>[148I]\AgdaSymbol{\{}\AgdaBound{S}\<[149I]%
-\>[149I]\AgdaSymbol{:}\<[150I]%
-\>[150I]\AgdaPostulate{Size}\<[151I]%
-\>[151I]\AgdaSymbol{→}\<[152I]%
-\>[152I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<[153I]%
-\>[153I]\AgdaSymbol{\{}\AgdaBound{A}\<[154I]%
-\>[154I]\AgdaSymbol{:}\<[155I]%
+\>[0]\AgdaFunction{unfold⁺}%
+\>[146I]\AgdaSymbol{:}%
+\>[147I]\AgdaSymbol{∀}%
+\>[148I]\AgdaSymbol{\{}\AgdaBound{S}%
+\>[149I]\AgdaSymbol{:}%
+\>[150I]\AgdaPostulate{Size}%
+\>[151I]\AgdaSymbol{→}%
+\>[152I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[153I]\AgdaSymbol{\{}\AgdaBound{A}%
+\>[154I]\AgdaSymbol{:}%
 \>[155I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
 \\
 %
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaSymbol{(}\AgdaBound{step}\<[156I]%
-\>[156I]\AgdaSymbol{:}\<[157I]%
-\>[157I]\AgdaSymbol{∀}\<[158I]%
-\>[158I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\<[159I]%
-\>[159I]\AgdaSymbol{→}\<[160I]%
-\>[160I]\AgdaBound{S}\<[161I]%
-\>[161I]\AgdaBound{i}\<[162I]%
-\>[162I]\AgdaSymbol{→}\<[163I]%
-\>[163I]\AgdaRecord{List1}\<[164I]%
-\>[164I]\AgdaBound{A}\<[165I]%
-\>[165I]\AgdaRecord{×}\<[166I]%
-\>[166I]\AgdaSymbol{(∀}\<[167I]%
-\>[167I]\AgdaSymbol{\{}\AgdaBound{j}\<[168I]%
-\>[168I]\AgdaSymbol{:}\<[169I]%
-\>[169I]\AgdaPostulate{Size<}\<[170I]%
-\>[170I]\AgdaBound{i}\AgdaSymbol{\}}\<[171I]%
-\>[171I]\AgdaSymbol{→}\<[172I]%
-\>[172I]\AgdaBound{S}\<[173I]%
-\>[173I]\AgdaBound{j}\AgdaSymbol{))}\<[174I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{(}\AgdaBound{step}%
+\>[156I]\AgdaSymbol{:}%
+\>[157I]\AgdaSymbol{∀}%
+\>[158I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
+\>[159I]\AgdaSymbol{→}%
+\>[160I]\AgdaBound{S}%
+\>[161I]\AgdaBound{i}%
+\>[162I]\AgdaSymbol{→}%
+\>[163I]\AgdaRecord{List1}%
+\>[164I]\AgdaBound{A}%
+\>[165I]\AgdaRecord{×}%
+\>[166I]\AgdaSymbol{(∀}%
+\>[167I]\AgdaSymbol{\{}\AgdaBound{j}%
+\>[168I]\AgdaSymbol{:}%
+\>[169I]\AgdaPostulate{Size<}%
+\>[170I]\AgdaBound{i}\AgdaSymbol{\}}%
+\>[171I]\AgdaSymbol{→}%
+\>[172I]\AgdaBound{S}%
+\>[173I]\AgdaBound{j}\AgdaSymbol{))}%
 \>[174I]\AgdaSymbol{→}\<%
 \\
 %
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaSymbol{∀}\<[175I]%
-\>[175I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\<[176I]%
-\>[176I]\AgdaSymbol{→}\<[177I]%
-\>[177I]\AgdaSymbol{(}\AgdaBound{s}\<[178I]%
-\>[178I]\AgdaSymbol{:}\<[179I]%
-\>[179I]\AgdaBound{S}\<[180I]%
-\>[180I]\AgdaBound{i}\AgdaSymbol{)}\<[181I]%
-\>[181I]\AgdaSymbol{→}\<[182I]%
-\>[182I]\AgdaRecord{Stream}\<[183I]%
-\>[183I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\<[184I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{∀}%
+\>[175I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
+\>[176I]\AgdaSymbol{→}%
+\>[177I]\AgdaSymbol{(}\AgdaBound{s}%
+\>[178I]\AgdaSymbol{:}%
+\>[179I]\AgdaBound{S}%
+\>[180I]\AgdaBound{i}\AgdaSymbol{)}%
+\>[181I]\AgdaSymbol{→}%
+\>[182I]\AgdaRecord{Stream}%
+\>[183I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
 \>[184I]\AgdaBound{A}\<%
 \\
 %
 \\
-\>[0]\AgdaField{head}\<[6]%
-\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}\<[185I]%
-\>[185I]\AgdaBound{step}\<[186I]%
-\>[186I]\AgdaBound{s}\AgdaSymbol{)}\<[187I]%
-\>[187I]\AgdaSymbol{=}\<[26]%
-\>[26]\AgdaField{head}\<[188I]%
-\>[188I]\AgdaSymbol{(}\AgdaField{fst}\<[189I]%
-\>[189I]\AgdaSymbol{(}\AgdaBound{step}\<[190I]%
+\>[0]\AgdaField{head}%
+\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}%
+\>[185I]\AgdaBound{step}%
+\>[186I]\AgdaBound{s}\AgdaSymbol{)}%
+\>[187I]\AgdaSymbol{=}%
+\>[26]\AgdaField{head}%
+\>[188I]\AgdaSymbol{(}\AgdaField{fst}%
+\>[189I]\AgdaSymbol{(}\AgdaBound{step}%
 \>[190I]\AgdaBound{s}\AgdaSymbol{))}\<%
 \\
-\>[0]\AgdaField{tail}\<[6]%
-\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}\<[191I]%
-\>[191I]\AgdaBound{step}\<[192I]%
-\>[192I]\AgdaBound{s}\AgdaSymbol{)}\<[193I]%
-\>[193I]\AgdaSymbol{=}\<[26]%
-\>[26]\AgdaKeyword{let}\<[31]%
-\>[31]\AgdaSymbol{((\_}\<[194I]%
-\>[194I]\AgdaInductiveConstructor{∷}\<[195I]%
-\>[195I]\AgdaBound{l}\AgdaSymbol{)}\<[196I]%
-\>[196I]\AgdaInductiveConstructor{,}\<[197I]%
-\>[197I]\AgdaBound{s′}\AgdaSymbol{)}\<[198I]%
-\>[198I]\AgdaSymbol{=}\<[199I]%
-\>[199I]\AgdaBound{step}\<[200I]%
+\>[0]\AgdaField{tail}%
+\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}%
+\>[191I]\AgdaBound{step}%
+\>[192I]\AgdaBound{s}\AgdaSymbol{)}%
+\>[193I]\AgdaSymbol{=}%
+\>[26]\AgdaKeyword{let}%
+\>[31]\AgdaSymbol{((\_}%
+\>[194I]\AgdaInductiveConstructor{∷}%
+\>[195I]\AgdaBound{l}\AgdaSymbol{)}%
+\>[196I]\AgdaInductiveConstructor{,}%
+\>[197I]\AgdaBound{s′}\AgdaSymbol{)}%
+\>[198I]\AgdaSymbol{=}%
+\>[199I]\AgdaBound{step}%
 \>[200I]\AgdaBound{s}\<%
 \\
-\>[193I][@{}l@{\AgdaIndent{0}}]\<[26]%
-\>[26]\AgdaKeyword{in}\<[31]%
-\>[31]\AgdaBound{l}\<[201I]%
-\>[201I]\AgdaFunction{++ˢ}\<[202I]%
-\>[202I]\AgdaFunction{unfold⁺}\<[203I]%
-\>[203I]\AgdaBound{step}\<[204I]%
+\>[193I][@{}l@{\AgdaIndent{0}}]%
+\>[26]\AgdaKeyword{in}%
+\>[31]\AgdaBound{l}%
+\>[201I]\AgdaFunction{++ˢ}%
+\>[202I]\AgdaFunction{unfold⁺}%
+\>[203I]\AgdaBound{step}%
 \>[204I]\AgdaBound{s′}\<%
 \end{code}
 Problem: The ∷ in the last let statement is not colored with constructor color.
