--- a/test/LaTeXAndHTML/succeed/Issue2077-1.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2077-1.tex
@@ -5,9 +5,9 @@
 
 \AgdaHide{
 Blip\begin{code}%
-\>[0]\AgdaKeyword{postulate}\<[0I]%
-\>[0I]\AgdaPostulate{A}\<[1I]%
-\>[1I]\AgdaSymbol{:}\<[2I]%
+\>[0]\AgdaKeyword{postulate}%
+\>[0I]\AgdaPostulate{A}%
+\>[1I]\AgdaSymbol{:}%
 \>[2I]\AgdaPrimitiveType{Set}\<%
 \end{code}}Blop
 
