--- a/test/LaTeXAndHTML/succeed/Links.tex
+++ b/test/LaTeXAndHTML/succeed/Links.tex
@@ -6,22 +6,22 @@
 \AgdaTarget{ℕ}
 \AgdaTarget{zero}
 \begin{code}%
-\>[0]\AgdaKeyword{data}\<[0I]%
-\>[0I]\AgdaDatatype{ℕ}\<[1I]%
-\>[1I]\AgdaSymbol{:}\<[2I]%
-\>[2I]\AgdaPrimitiveType{Set}\<[3I]%
+\>[0]\AgdaKeyword{data}%
+\>[0I]\AgdaDatatype{ℕ}%
+\>[1I]\AgdaSymbol{:}%
+\>[2I]\AgdaPrimitiveType{Set}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{zero}\<[8]%
-\>[8]\AgdaSymbol{:}\<[4I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{zero}%
+\>[8]\AgdaSymbol{:}%
 \>[4I]\AgdaDatatype{ℕ}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{suc}\<[8]%
-\>[8]\AgdaSymbol{:}\<[5I]%
-\>[5I]\AgdaDatatype{ℕ}\<[6I]%
-\>[6I]\AgdaSymbol{→}\<[7I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{suc}%
+\>[8]\AgdaSymbol{:}%
+\>[5I]\AgdaDatatype{ℕ}%
+\>[6I]\AgdaSymbol{→}%
 \>[7I]\AgdaDatatype{ℕ}\<%
 \end{code}
 
@@ -34,14 +34,14 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
 \AgdaTarget{two}
 \hypertarget{two}{}
 \begin{code}%
-\>[0]\AgdaFunction{two}\<[8I]%
-\>[8I]\AgdaSymbol{:}\<[9I]%
+\>[0]\AgdaFunction{two}%
+\>[8I]\AgdaSymbol{:}%
 \>[9I]\AgdaDatatype{ℕ}\<%
 \\
-\>[0]\AgdaFunction{two}\<[10I]%
-\>[10I]\AgdaSymbol{=}\<[11I]%
-\>[11I]\AgdaInductiveConstructor{suc}\<[12I]%
-\>[12I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\<[13I]%
+\>[0]\AgdaFunction{two}%
+\>[10I]\AgdaSymbol{=}%
+\>[11I]\AgdaInductiveConstructor{suc}%
+\>[12I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}%
 \>[13I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \end{code}
 
@@ -55,16 +55,16 @@ Now that the target for \AgdaFunction{two} has been defined the link
 works automatically.
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}\<[14I]%
-\>[14I]\AgdaDatatype{Bool}\<[15I]%
-\>[15I]\AgdaSymbol{:}\<[16I]%
-\>[16I]\AgdaPrimitiveType{Set}\<[17I]%
+\>[0]\AgdaKeyword{data}%
+\>[14I]\AgdaDatatype{Bool}%
+\>[15I]\AgdaSymbol{:}%
+\>[16I]\AgdaPrimitiveType{Set}%
 \>[17I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{true}\<[18I]%
-\>[18I]\AgdaInductiveConstructor{false}\<[19I]%
-\>[19I]\AgdaSymbol{:}\<[20I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{true}%
+\>[18I]\AgdaInductiveConstructor{false}%
+\>[19I]\AgdaSymbol{:}%
 \>[20I]\AgdaDatatype{Bool}\<%
 \end{code}
 
@@ -73,36 +73,36 @@ to be specified as follows:
 
 \AgdaTarget{if, then, else, if\_then\_else\_}
 \begin{code}%
-\>[0]\AgdaFunction{if\_then\_else\_}\<[21I]%
-\>[21I]\AgdaSymbol{:}\<[22I]%
-\>[22I]\AgdaSymbol{\{}\AgdaBound{A}\<[23I]%
-\>[23I]\AgdaSymbol{:}\<[24I]%
-\>[24I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<[25I]%
-\>[25I]\AgdaSymbol{→}\<[26I]%
-\>[26I]\AgdaDatatype{Bool}\<[27I]%
-\>[27I]\AgdaSymbol{→}\<[28I]%
-\>[28I]\AgdaBound{A}\<[29I]%
-\>[29I]\AgdaSymbol{→}\<[30I]%
-\>[30I]\AgdaBound{A}\<[31I]%
-\>[31I]\AgdaSymbol{→}\<[32I]%
+\>[0]\AgdaFunction{if\_then\_else\_}%
+\>[21I]\AgdaSymbol{:}%
+\>[22I]\AgdaSymbol{\{}\AgdaBound{A}%
+\>[23I]\AgdaSymbol{:}%
+\>[24I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[25I]\AgdaSymbol{→}%
+\>[26I]\AgdaDatatype{Bool}%
+\>[27I]\AgdaSymbol{→}%
+\>[28I]\AgdaBound{A}%
+\>[29I]\AgdaSymbol{→}%
+\>[30I]\AgdaBound{A}%
+\>[31I]\AgdaSymbol{→}%
 \>[32I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{if}\<[33I]%
-\>[33I]\AgdaInductiveConstructor{true}\<[34I]%
-\>[34I]\AgdaFunction{then}\<[35I]%
-\>[35I]\AgdaBound{t}\<[36I]%
-\>[36I]\AgdaFunction{else}\<[37I]%
-\>[37I]\AgdaBound{f}\<[38I]%
-\>[38I]\AgdaSymbol{=}\<[39I]%
+\>[0]\AgdaFunction{if}%
+\>[33I]\AgdaInductiveConstructor{true}%
+\>[34I]\AgdaFunction{then}%
+\>[35I]\AgdaBound{t}%
+\>[36I]\AgdaFunction{else}%
+\>[37I]\AgdaBound{f}%
+\>[38I]\AgdaSymbol{=}%
 \>[39I]\AgdaBound{t}\<%
 \\
-\>[0]\AgdaFunction{if}\<[40I]%
-\>[40I]\AgdaInductiveConstructor{false}\<[41I]%
-\>[41I]\AgdaFunction{then}\<[42I]%
-\>[42I]\AgdaBound{t}\<[43I]%
-\>[43I]\AgdaFunction{else}\<[44I]%
-\>[44I]\AgdaBound{f}\<[45I]%
-\>[45I]\AgdaSymbol{=}\<[46I]%
+\>[0]\AgdaFunction{if}%
+\>[40I]\AgdaInductiveConstructor{false}%
+\>[41I]\AgdaFunction{then}%
+\>[42I]\AgdaBound{t}%
+\>[43I]\AgdaFunction{else}%
+\>[44I]\AgdaBound{f}%
+\>[45I]\AgdaSymbol{=}%
 \>[46I]\AgdaBound{f}\<%
 \end{code}
 
