--- a/test/LaTeXAndHTML/succeed/Multiline.tex
+++ b/test/LaTeXAndHTML/succeed/Multiline.tex
@@ -2,21 +2,21 @@
 \usepackage{agda}
 \begin{document}
 \begin{code}%
-\>[0]\AgdaKeyword{open}\<[0I]%
-\>[0I]\AgdaKeyword{import}\<[1I]%
+\>[0]\AgdaKeyword{open}%
+\>[0I]\AgdaKeyword{import}%
 \>[1I]\AgdaModule{Agda.Builtin.String}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{argh}\<[2I]%
-\>[2I]\AgdaSymbol{:}\<[3I]%
+\>[0]\AgdaFunction{argh}%
+\>[2I]\AgdaSymbol{:}%
 \>[3I]\AgdaPostulate{String}\<%
 \\
-\>[0]\AgdaFunction{argh}\<[4I]%
-\>[4I]\AgdaSymbol{=}\<[8]%
+\>[0]\AgdaFunction{argh}%
+\>[4I]\AgdaSymbol{=}%
 \>[8]\AgdaString{"Hello,\textbackslash{}}\<%
 \\
-\>[4I][@{}l@{\AgdaIndent{0}}]\<[8]%
+\>[4I][@{}l@{\AgdaIndent{0}}]%
 \>[8]\AgdaString{\textbackslash{}World!"}\<%
 \end{code}
 \end{document}
