--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.tex
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.tex
@@ -5,16 +5,16 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[0I]%
-\>[0I]\AgdaModule{NoNewLinesVsNewLines}\<[1I]%
+\>[0]\AgdaKeyword{module}%
+\>[0I]\AgdaModule{NoNewLinesVsNewLines}%
 \>[1I]\AgdaKeyword{where}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\<%
 \\
-\>[0]\AgdaKeyword{module}\<[2I]%
-\>[2I]\AgdaModule{Test2}\<[3I]%
+\>[0]\AgdaKeyword{module}%
+\>[2I]\AgdaModule{Test2}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
 \>[0]\<%
