--- a/test/LaTeXAndHTML/succeed/Options.tex
+++ b/test/LaTeXAndHTML/succeed/Options.tex
@@ -5,12 +5,12 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaSymbol{\{{-}\#}\<[0I]%
-\>[0I]\AgdaKeyword{OPTIONS}\<[13]%
+\>[0]\AgdaSymbol{\{{-}\#}%
+\>[0I]\AgdaKeyword{OPTIONS}%
 \>[13]\AgdaOption{{-}{-}no{-}positivity{-}check}\<%
 \\
-\>[0I][@{}l@{\AgdaIndent{0}}]\<[13]%
-\>[13]\AgdaOption{{-}{-}no{-}termination{-}check}\<[1I]%
+\>[0I][@{}l@{\AgdaIndent{0}}]%
+\>[13]\AgdaOption{{-}{-}no{-}termination{-}check}%
 \>[1I]\AgdaSymbol{\#{-}\}}\<%
 \end{code}
 
