--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
@@ -3,53 +3,53 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}\<[0I]%
-\>[0I]\AgdaDatatype{Nat}\<[1I]%
-\>[1I]\AgdaSymbol{:}\<[2I]%
-\>[2I]\AgdaPrimitiveType{Set}\<[3I]%
+\>[0]\AgdaKeyword{data}%
+\>[0I]\AgdaDatatype{Nat}%
+\>[1I]\AgdaSymbol{:}%
+\>[2I]\AgdaPrimitiveType{Set}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{zero}\<[4I]%
-\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{zero}%
+\>[4I]\AgdaSymbol{:}%
 \>[5I]\AgdaDatatype{Nat}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{suc}\<[6I]%
-\>[6I]\AgdaSymbol{:}\<[7I]%
-\>[7I]\AgdaDatatype{Nat}\<[8I]%
-\>[8I]\AgdaSymbol{→}\<[9I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{suc}%
+\>[6I]\AgdaSymbol{:}%
+\>[7I]\AgdaDatatype{Nat}%
+\>[8I]\AgdaSymbol{→}%
 \>[9I]\AgdaDatatype{Nat}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{module}\<[10I]%
-\>[10I]\AgdaModule{\_}\<[11I]%
+\>[0]\AgdaKeyword{module}%
+\>[10I]\AgdaModule{\_}%
 \>[11I]\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{pattern}\<[12I]%
-\>[12I]\AgdaInductiveConstructor{two}\<[16]%
-\>[16]\AgdaSymbol{=}\<[13I]%
-\>[13I]\AgdaInductiveConstructor{suc}\<[14I]%
-\>[14I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\<[15I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{pattern}%
+\>[12I]\AgdaInductiveConstructor{two}%
+\>[16]\AgdaSymbol{=}%
+\>[13I]\AgdaInductiveConstructor{suc}%
+\>[14I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}%
 \>[15I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{pattern}\<[16I]%
-\>[16I]\AgdaInductiveConstructor{three}\<[17I]%
-\>[17I]\AgdaSymbol{=}\<[18I]%
-\>[18I]\AgdaInductiveConstructor{suc}\<[19I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{pattern}%
+\>[16I]\AgdaInductiveConstructor{three}%
+\>[17I]\AgdaSymbol{=}%
+\>[18I]\AgdaInductiveConstructor{suc}%
 \>[19I]\AgdaInductiveConstructor{two}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}\<[20I]%
-\>[20I]\AgdaDatatype{Bot}\<[21I]%
-\>[21I]\AgdaSymbol{:}\<[22I]%
-\>[22I]\AgdaPrimitiveType{Set}\<[23I]%
+\>[0]\AgdaKeyword{data}%
+\>[20I]\AgdaDatatype{Bot}%
+\>[21I]\AgdaSymbol{:}%
+\>[22I]\AgdaPrimitiveType{Set}%
 \>[23I]\AgdaKeyword{where}\<%
 \end{code}
 
