--- a/test/LaTeXAndHTML/succeed/Tag.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.tex
@@ -5,79 +5,79 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[0I]%
-\>[0I]\AgdaModule{Tag}\<[1I]%
+\>[0]\AgdaKeyword{module}%
+\>[0I]\AgdaModule{Tag}%
 \>[1I]\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{module}\<[2I]%
-\>[2I]\AgdaModule{Apa}\<[3I]%
+\>[0]\AgdaKeyword{module}%
+\>[2I]\AgdaModule{Apa}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{bepa}\<[4I]%
-\>[4I]\AgdaSymbol{:}\<[5I]%
-\>[5I]\AgdaPrimitiveType{Set}\<[6I]%
-\>[6I]\AgdaSymbol{→}\<[7I]%
+\>[0]\AgdaFunction{bepa}%
+\>[4I]\AgdaSymbol{:}%
+\>[5I]\AgdaPrimitiveType{Set}%
+\>[6I]\AgdaSymbol{→}%
 \>[7I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[0]\AgdaFunction{bepa}\<[8I]%
-\>[8I]\AgdaBound{x}\<[9I]%
-\>[9I]\AgdaSymbol{=}\<[10I]%
+\>[0]\AgdaFunction{bepa}%
+\>[8I]\AgdaBound{x}%
+\>[9I]\AgdaSymbol{=}%
 \>[10I]\AgdaBound{x}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}\<[11I]%
-\>[11I]\AgdaDatatype{Cepa}\<[12I]%
-\>[12I]\AgdaSymbol{:}\<[13I]%
-\>[13I]\AgdaPrimitiveType{Set}\<[14I]%
+\>[0]\AgdaKeyword{data}%
+\>[11I]\AgdaDatatype{Cepa}%
+\>[12I]\AgdaSymbol{:}%
+\>[13I]\AgdaPrimitiveType{Set}%
 \>[14I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{cepa}\<[15I]%
-\>[15I]\AgdaSymbol{:}\<[16I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{cepa}%
+\>[15I]\AgdaSymbol{:}%
 \>[16I]\AgdaDatatype{Cepa}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}\<[17I]%
-\>[17I]\AgdaRecord{Depa}\<[18I]%
-\>[18I]\AgdaSymbol{:}\<[19I]%
-\>[19I]\AgdaPrimitiveType{Set₁}\<[20I]%
+\>[0]\AgdaKeyword{record}%
+\>[17I]\AgdaRecord{Depa}%
+\>[18I]\AgdaSymbol{:}%
+\>[19I]\AgdaPrimitiveType{Set₁}%
 \>[20I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{depa}\<[21I]%
-\>[21I]\AgdaSymbol{:}\<[22I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{depa}%
+\>[21I]\AgdaSymbol{:}%
 \>[22I]\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{epa}\<[23I]%
-\>[23I]\AgdaSymbol{:}\<[24I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{epa}%
+\>[23I]\AgdaSymbol{:}%
 \>[24I]\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{α}\<[6]%
-\>[6]\AgdaSymbol{:}\<[25I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{α}%
+\>[6]\AgdaSymbol{:}%
 \>[25I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{\_∘\_}\<[26I]%
-\>[26I]\AgdaSymbol{:}\<[27I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{\_∘\_}%
+\>[26I]\AgdaSymbol{:}%
 \>[27I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
