--- a/test/LaTeXAndHTML/succeed/ThreeNewLines.tex
+++ b/test/LaTeXAndHTML/succeed/ThreeNewLines.tex
@@ -9,8 +9,8 @@
 \\
 %
 \\
-\>[0]\AgdaKeyword{module}\<[0I]%
-\>[0I]\AgdaModule{ThreeNewLines}\<[1I]%
+\>[0]\AgdaKeyword{module}%
+\>[0I]\AgdaModule{ThreeNewLines}%
 \>[1I]\AgdaKeyword{where}\<%
 \\
 %
