--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
@@ -11,14 +11,14 @@
 \\
 \>[0]\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{A}\<[0I]%
-\>[0I]\AgdaSymbol{:}\<[1I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{A}%
+\>[0I]\AgdaSymbol{:}%
 \>[1I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{B}\<[2I]%
-\>[2I]\AgdaSymbol{:}\<[3I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{B}%
+\>[2I]\AgdaSymbol{:}%
 \>[3I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \hrule
@@ -51,19 +51,19 @@
 \end{code}
 \hrule
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[4I]%
-\>[4I]\AgdaModule{\_}\<[5I]%
+\>[0]\AgdaKeyword{module}%
+\>[4I]\AgdaModule{\_}%
 \>[5I]\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
 \>[0]\<%
 \\
-\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaKeyword{postulate}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaPostulate{C}\<[6I]%
-\>[6I]\AgdaSymbol{:}\<[7I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaPostulate{C}%
+\>[6I]\AgdaSymbol{:}%
 \>[7I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \hrule
@@ -71,20 +71,20 @@
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{F}\<[5]%
-\>[5]\AgdaSymbol{:}\<[8I]%
-\>[8I]\AgdaPrimitiveType{Set}\<[9I]%
-\>[9I]\AgdaSymbol{→}\<[10I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{F}%
+\>[5]\AgdaSymbol{:}%
+\>[8I]\AgdaPrimitiveType{Set}%
+\>[9I]\AgdaSymbol{→}%
 \>[10I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{X}\<[5]%
-\>[5]\AgdaSymbol{:}\<[11I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{X}%
+\>[5]\AgdaSymbol{:}%
 \>[11I]\AgdaPostulate{F}\<%
 \end{code}
 \begin{code}%
-\>[11I][@{}l@{\AgdaIndent{1}}]\<[10]%
+\>[11I][@{}l@{\AgdaIndent{1}}]%
 \>[10]\AgdaPostulate{A}\<%
 \end{code}
 \end{AgdaAlign}
