--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.tex
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.tex
@@ -5,8 +5,8 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[0I]%
-\>[0I]\AgdaModule{AccidentalSpacesBeforeEndCode}\<[1I]%
+\>[0]\AgdaKeyword{module}%
+\>[0I]\AgdaModule{AccidentalSpacesBeforeEndCode}%
 \>[1I]\AgdaKeyword{where}\<%
 \end{code}
 
