--- a/test/LaTeXAndHTML/succeed/EscapedTeXComment.tex
+++ b/test/LaTeXAndHTML/succeed/EscapedTeXComment.tex
@@ -5,9 +5,9 @@
 \begin{document}
 
 100\% postulated: \begin{code}%
-\>[0]\AgdaKeyword{postulate}\<[0I]%
-\>[0I]\AgdaPostulate{A}\<[1I]%
-\>[1I]\AgdaSymbol{:}\<[2I]%
+\>[0]\AgdaKeyword{postulate}%
+\>[0I]\AgdaPostulate{A}%
+\>[1I]\AgdaSymbol{:}%
 \>[2I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
