--- a/test/LaTeXAndHTML/succeed/Indenting.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting.tex
@@ -5,22 +5,22 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}\<[0I]%
-\>[0I]\AgdaDatatype{Nat}\<[1I]%
-\>[1I]\AgdaSymbol{:}\<[2I]%
-\>[2I]\AgdaPrimitiveType{Set}\<[3I]%
+\>[0]\AgdaKeyword{data}%
+\>[0I]\AgdaDatatype{Nat}%
+\>[1I]\AgdaSymbol{:}%
+\>[2I]\AgdaPrimitiveType{Set}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{zero}\<[4I]%
-\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{zero}%
+\>[4I]\AgdaSymbol{:}%
 \>[5I]\AgdaDatatype{Nat}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{suc}\<[6I]%
-\>[6I]\AgdaSymbol{:}\<[7I]%
-\>[7I]\AgdaDatatype{Nat}\<[8I]%
-\>[8I]\AgdaSymbol{{-}>}\<[9I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{suc}%
+\>[6I]\AgdaSymbol{:}%
+\>[7I]\AgdaDatatype{Nat}%
+\>[8I]\AgdaSymbol{{-}>}%
 \>[9I]\AgdaDatatype{Nat}\<%
 \end{code}
 
