--- a/test/LaTeXAndHTML/succeed/Issue1241.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1241.tex
@@ -9,17 +9,17 @@
 This is the actual test.
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[0I]%
-\>[0I]\AgdaSymbol{\_}\<[1I]%
+\>[0]\AgdaKeyword{module}%
+\>[0I]\AgdaSymbol{\_}%
 \>[1I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{IsThisCorrectlyLaTeXed}\<[2I]%
-\>[2I]\AgdaSymbol{:}\<[3I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{IsThisCorrectlyLaTeXed}%
+\>[2I]\AgdaSymbol{:}%
 \>[3I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
