--- a/test/LaTeXAndHTML/succeed/Issue1618.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1618.tex
@@ -6,53 +6,53 @@
 The let should be properly aligned in the following code:
 
 \begin{code}%
-\>[0]\AgdaFunction{id}\<[0I]%
-\>[0I]\AgdaSymbol{:}\<[1I]%
-\>[1I]\AgdaSymbol{(}\AgdaBound{A}\<[2I]%
-\>[2I]\AgdaSymbol{:}\<[3I]%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[4I]%
-\>[4I]\AgdaSymbol{→}\<[5I]%
-\>[5I]\AgdaBound{A}\<[6I]%
-\>[6I]\AgdaSymbol{→}\<[7I]%
+\>[0]\AgdaFunction{id}%
+\>[0I]\AgdaSymbol{:}%
+\>[1I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[2I]\AgdaSymbol{:}%
+\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[4I]\AgdaSymbol{→}%
+\>[5I]\AgdaBound{A}%
+\>[6I]\AgdaSymbol{→}%
 \>[7I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{id}\<[8I]%
-\>[8I]\AgdaBound{A}\<[9I]%
+\>[0]\AgdaFunction{id}%
+\>[8I]\AgdaBound{A}%
 \>[9I]\AgdaSymbol{=}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{let}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaBound{id'}\<[10I]%
-\>[10I]\AgdaSymbol{:}\<[11I]%
-\>[11I]\AgdaFunction{B}\<[12I]%
-\>[12I]\AgdaSymbol{→}\<[13I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaBound{id'}%
+\>[10I]\AgdaSymbol{:}%
+\>[11I]\AgdaFunction{B}%
+\>[12I]\AgdaSymbol{→}%
 \>[13I]\AgdaFunction{B}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaBound{id'}\<[14I]%
-\>[14I]\AgdaSymbol{=}\<[15I]%
-\>[15I]\AgdaSymbol{λ}\<[16I]%
-\>[16I]\AgdaBound{a}\<[17I]%
-\>[17I]\AgdaSymbol{→}\<[18I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaBound{id'}%
+\>[14I]\AgdaSymbol{=}%
+\>[15I]\AgdaSymbol{λ}%
+\>[16I]\AgdaBound{a}%
+\>[17I]\AgdaSymbol{→}%
 \>[18I]\AgdaBound{a}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{in}\<[19I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{in}%
 \>[19I]\AgdaBound{id'}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaFunction{B}\<[20I]%
-\>[20I]\AgdaSymbol{:}\<[21I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaFunction{B}%
+\>[20I]\AgdaSymbol{:}%
 \>[21I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaFunction{B}\<[22I]%
-\>[22I]\AgdaSymbol{=}\<[23I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaFunction{B}%
+\>[22I]\AgdaSymbol{=}%
 \>[23I]\AgdaBound{A}\<%
 \end{code}
 
@@ -60,49 +60,49 @@ This should also work if the new block is following after the
 keyword, as opposed to on a new line.
 
 \begin{code}%
-\>[0]\AgdaFunction{di}\<[24I]%
-\>[24I]\AgdaSymbol{:}\<[25I]%
-\>[25I]\AgdaSymbol{(}\AgdaBound{A}\<[26I]%
-\>[26I]\AgdaSymbol{:}\<[27I]%
-\>[27I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[28I]%
-\>[28I]\AgdaSymbol{→}\<[29I]%
-\>[29I]\AgdaBound{A}\<[30I]%
-\>[30I]\AgdaSymbol{→}\<[31I]%
+\>[0]\AgdaFunction{di}%
+\>[24I]\AgdaSymbol{:}%
+\>[25I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[26I]\AgdaSymbol{:}%
+\>[27I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[28I]\AgdaSymbol{→}%
+\>[29I]\AgdaBound{A}%
+\>[30I]\AgdaSymbol{→}%
 \>[31I]\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{di}\<[32I]%
-\>[32I]\AgdaBound{A}\<[33I]%
+\>[0]\AgdaFunction{di}%
+\>[32I]\AgdaBound{A}%
 \>[33I]\AgdaSymbol{=}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{let}\<[7]%
-\>[7]\AgdaBound{id'}\<[34I]%
-\>[34I]\AgdaSymbol{:}\<[35I]%
-\>[35I]\AgdaFunction{B}\<[36I]%
-\>[36I]\AgdaSymbol{→}\<[37I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{let}%
+\>[7]\AgdaBound{id'}%
+\>[34I]\AgdaSymbol{:}%
+\>[35I]\AgdaFunction{B}%
+\>[36I]\AgdaSymbol{→}%
 \>[37I]\AgdaFunction{B}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[7]%
-\>[7]\AgdaBound{id'}\<[38I]%
-\>[38I]\AgdaSymbol{=}\<[39I]%
-\>[39I]\AgdaSymbol{λ}\<[40I]%
-\>[40I]\AgdaBound{a}\<[41I]%
-\>[41I]\AgdaSymbol{→}\<[42I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[7]\AgdaBound{id'}%
+\>[38I]\AgdaSymbol{=}%
+\>[39I]\AgdaSymbol{λ}%
+\>[40I]\AgdaBound{a}%
+\>[41I]\AgdaSymbol{→}%
 \>[42I]\AgdaBound{a}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{in}\<[43I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{in}%
 \>[43I]\AgdaBound{id'}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{where}\<[9]%
-\>[9]\AgdaFunction{B}\<[44I]%
-\>[44I]\AgdaSymbol{:}\<[45I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{where}%
+\>[9]\AgdaFunction{B}%
+\>[44I]\AgdaSymbol{:}%
 \>[45I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[9]%
-\>[9]\AgdaFunction{B}\<[46I]%
-\>[46I]\AgdaSymbol{=}\<[47I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[9]\AgdaFunction{B}%
+\>[46I]\AgdaSymbol{=}%
 \>[47I]\AgdaBound{A}\<%
 \end{code}
 \end{document}
