--- a/test/LaTeXAndHTML/succeed/Issue982.tex
+++ b/test/LaTeXAndHTML/succeed/Issue982.tex
@@ -35,99 +35,99 @@
 %\renewcommand{\AgdaIndent}{\;\;}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record}\<[0I]%
-\>[0I]\AgdaRecord{Sigma}\<[1I]%
-\>[1I]\AgdaSymbol{(}\AgdaBound{A}\<[2I]%
-\>[2I]\AgdaSymbol{:}\<[3I]%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[4I]%
-\>[4I]\AgdaSymbol{(}\AgdaBound{B}\<[5I]%
-\>[5I]\AgdaSymbol{:}\<[6I]%
-\>[6I]\AgdaBound{A}\<[7I]%
-\>[7I]\AgdaSymbol{→}\<[8I]%
-\>[8I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}\<[9I]%
-\>[9I]\AgdaSymbol{:}\<[10I]%
-\>[10I]\AgdaPrimitiveType{Set}\<[11I]%
+\>[0]\AgdaKeyword{record}%
+\>[0I]\AgdaRecord{Sigma}%
+\>[1I]\AgdaSymbol{(}\AgdaBound{A}%
+\>[2I]\AgdaSymbol{:}%
+\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[4I]\AgdaSymbol{(}\AgdaBound{B}%
+\>[5I]\AgdaSymbol{:}%
+\>[6I]\AgdaBound{A}%
+\>[7I]\AgdaSymbol{→}%
+\>[8I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
+\>[9I]\AgdaSymbol{:}%
+\>[10I]\AgdaPrimitiveType{Set}%
 \>[11I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{constructor}\<[12I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{constructor}%
 \>[12I]\AgdaInductiveConstructor{\_,\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{proj₁}\<[13I]%
-\>[13I]\AgdaSymbol{:}\<[14I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{proj₁}%
+\>[13I]\AgdaSymbol{:}%
 \>[14I]\AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{proj₂}\<[15I]%
-\>[15I]\AgdaSymbol{:}\<[16I]%
-\>[16I]\AgdaBound{B}\<[17I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaField{proj₂}%
+\>[15I]\AgdaSymbol{:}%
+\>[16I]\AgdaBound{B}%
 \>[17I]\AgdaField{proj₁}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{open}\<[18I]%
-\>[18I]\AgdaModule{Sigma}\<[19I]%
+\>[0]\AgdaKeyword{open}%
+\>[18I]\AgdaModule{Sigma}%
 \>[19I]\AgdaKeyword{public}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaFunction{uncurry}\<[20I]%
-\>[20I]\AgdaSymbol{:}\<[21I]%
-\>[21I]\AgdaSymbol{\{}\AgdaBound{A}\<[22I]%
-\>[22I]\AgdaSymbol{:}\<[23I]%
-\>[23I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<[24I]%
-\>[24I]\AgdaSymbol{\{}\AgdaBound{B}\<[25I]%
-\>[25I]\AgdaSymbol{:}\<[26I]%
-\>[26I]\AgdaBound{A}\<[27I]%
-\>[27I]\AgdaSymbol{→}\<[28I]%
-\>[28I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<[29I]%
-\>[29I]\AgdaSymbol{\{}\AgdaBound{C}\<[30I]%
-\>[30I]\AgdaSymbol{:}\<[31I]%
-\>[31I]\AgdaRecord{Sigma}\<[32I]%
-\>[32I]\AgdaBound{A}\<[33I]%
-\>[33I]\AgdaBound{B}\<[34I]%
-\>[34I]\AgdaSymbol{→}\<[35I]%
-\>[35I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<[36I]%
+\>[0]\AgdaFunction{uncurry}%
+\>[20I]\AgdaSymbol{:}%
+\>[21I]\AgdaSymbol{\{}\AgdaBound{A}%
+\>[22I]\AgdaSymbol{:}%
+\>[23I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[24I]\AgdaSymbol{\{}\AgdaBound{B}%
+\>[25I]\AgdaSymbol{:}%
+\>[26I]\AgdaBound{A}%
+\>[27I]\AgdaSymbol{→}%
+\>[28I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[29I]\AgdaSymbol{\{}\AgdaBound{C}%
+\>[30I]\AgdaSymbol{:}%
+\>[31I]\AgdaRecord{Sigma}%
+\>[32I]\AgdaBound{A}%
+\>[33I]\AgdaBound{B}%
+\>[34I]\AgdaSymbol{→}%
+\>[35I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
 \>[36I]\AgdaSymbol{→}\<%
 \\
 \>[20I][@{}l@{\AgdaIndent{0}}]\<[21I]%
-\>[10]\AgdaSymbol{((}\AgdaBound{x}\<[37I]%
-\>[37I]\AgdaSymbol{:}\<[38I]%
-\>[38I]\AgdaBound{A}\AgdaSymbol{)}\<[39I]%
-\>[39I]\AgdaSymbol{→}\<[40I]%
-\>[40I]\AgdaSymbol{(}\AgdaBound{y}\<[41I]%
-\>[41I]\AgdaSymbol{:}\<[42I]%
-\>[42I]\AgdaBound{B}\<[43I]%
-\>[43I]\AgdaBound{x}\AgdaSymbol{)}\<[44I]%
-\>[44I]\AgdaSymbol{→}\<[45I]%
-\>[45I]\AgdaBound{C}\<[46I]%
-\>[46I]\AgdaSymbol{(}\AgdaBound{x}\<[47I]%
-\>[47I]\AgdaInductiveConstructor{,}\<[48I]%
-\>[48I]\AgdaBound{y}\AgdaSymbol{))}\<[49I]%
+\>[10]\AgdaSymbol{((}\AgdaBound{x}%
+\>[37I]\AgdaSymbol{:}%
+\>[38I]\AgdaBound{A}\AgdaSymbol{)}%
+\>[39I]\AgdaSymbol{→}%
+\>[40I]\AgdaSymbol{(}\AgdaBound{y}%
+\>[41I]\AgdaSymbol{:}%
+\>[42I]\AgdaBound{B}%
+\>[43I]\AgdaBound{x}\AgdaSymbol{)}%
+\>[44I]\AgdaSymbol{→}%
+\>[45I]\AgdaBound{C}%
+\>[46I]\AgdaSymbol{(}\AgdaBound{x}%
+\>[47I]\AgdaInductiveConstructor{,}%
+\>[48I]\AgdaBound{y}\AgdaSymbol{))}%
 \>[49I]\AgdaSymbol{→}\<%
 \\
-\>[20I][@{}l@{\AgdaIndent{0}}]\<[10]%
-\>[10]\AgdaSymbol{((}\AgdaBound{p}\<[50I]%
-\>[50I]\AgdaSymbol{:}\<[51I]%
-\>[51I]\AgdaRecord{Sigma}\<[52I]%
-\>[52I]\AgdaBound{A}\<[53I]%
-\>[53I]\AgdaBound{B}\AgdaSymbol{)}\<[54I]%
-\>[54I]\AgdaSymbol{→}\<[55I]%
-\>[55I]\AgdaBound{C}\<[56I]%
+\>[20I][@{}l@{\AgdaIndent{0}}]%
+\>[10]\AgdaSymbol{((}\AgdaBound{p}%
+\>[50I]\AgdaSymbol{:}%
+\>[51I]\AgdaRecord{Sigma}%
+\>[52I]\AgdaBound{A}%
+\>[53I]\AgdaBound{B}\AgdaSymbol{)}%
+\>[54I]\AgdaSymbol{→}%
+\>[55I]\AgdaBound{C}%
 \>[56I]\AgdaBound{p}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{uncurry}\<[57I]%
-\>[57I]\AgdaBound{f}\<[58I]%
-\>[58I]\AgdaSymbol{(}\AgdaBound{x}\<[59I]%
-\>[59I]\AgdaInductiveConstructor{,}\<[60I]%
-\>[60I]\AgdaBound{y}\AgdaSymbol{)}\<[61I]%
-\>[61I]\AgdaSymbol{=}\<[62I]%
-\>[62I]\AgdaBound{f}\<[63I]%
-\>[63I]\AgdaBound{x}\<[64I]%
+\>[0]\AgdaFunction{uncurry}%
+\>[57I]\AgdaBound{f}%
+\>[58I]\AgdaSymbol{(}\AgdaBound{x}%
+\>[59I]\AgdaInductiveConstructor{,}%
+\>[60I]\AgdaBound{y}\AgdaSymbol{)}%
+\>[61I]\AgdaSymbol{=}%
+\>[62I]\AgdaBound{f}%
+\>[63I]\AgdaBound{x}%
 \>[64I]\AgdaBound{y}\<%
 \end{code}
 
