--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
@@ -10,9 +10,9 @@
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{Whatever}\<[0I]%
-\>[0I]\AgdaSymbol{:}\<[1I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{Whatever}%
+\>[0I]\AgdaSymbol{:}%
 \>[1I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
