--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
@@ -5,8 +5,8 @@
 
 \AgdaHide{
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[0I]%
-\>[0I]\AgdaModule{OneSpaceIndent}\<[1I]%
+\>[0]\AgdaKeyword{module}%
+\>[0I]\AgdaModule{OneSpaceIndent}%
 \>[1I]\AgdaKeyword{where}\<%
 \end{code}
 }
@@ -16,13 +16,13 @@ Text1
 
 \AgdaHide{
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[2I]%
-\>[2I]\AgdaModule{Defs}\<[3I]%
+\>[0]\AgdaKeyword{module}%
+\>[2I]\AgdaModule{Defs}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[1]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[1]\AgdaKeyword{postulate}\<%
 \end{code}
 }
@@ -30,9 +30,9 @@ Text1
 Text2
 
 \begin{code}%
-\>[1][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaPostulate{Base}\<[4I]%
-\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[1][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaPostulate{Base}%
+\>[4I]\AgdaSymbol{:}%
 \>[5I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
