--- a/test/LaTeXAndHTML/succeed/PatternSynonyms3.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms3.tex
@@ -3,59 +3,59 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}\<[0I]%
-\>[0I]\AgdaDatatype{Nat}\<[1I]%
-\>[1I]\AgdaSymbol{:}\<[2I]%
-\>[2I]\AgdaPrimitiveType{Set}\<[3I]%
+\>[0]\AgdaKeyword{data}%
+\>[0I]\AgdaDatatype{Nat}%
+\>[1I]\AgdaSymbol{:}%
+\>[2I]\AgdaPrimitiveType{Set}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{zero}\<[4I]%
-\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{zero}%
+\>[4I]\AgdaSymbol{:}%
 \>[5I]\AgdaDatatype{Nat}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{suc}\<[6I]%
-\>[6I]\AgdaSymbol{:}\<[7I]%
-\>[7I]\AgdaDatatype{Nat}\<[8I]%
-\>[8I]\AgdaSymbol{→}\<[9I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{suc}%
+\>[6I]\AgdaSymbol{:}%
+\>[7I]\AgdaDatatype{Nat}%
+\>[8I]\AgdaSymbol{→}%
 \>[9I]\AgdaDatatype{Nat}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{pattern}\<[10I]%
-\>[10I]\AgdaInductiveConstructor{two}\<[14]%
-\>[14]\AgdaSymbol{=}\<[11I]%
-\>[11I]\AgdaInductiveConstructor{suc}\<[12I]%
-\>[12I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\<[13I]%
+\>[0]\AgdaKeyword{pattern}%
+\>[10I]\AgdaInductiveConstructor{two}%
+\>[14]\AgdaSymbol{=}%
+\>[11I]\AgdaInductiveConstructor{suc}%
+\>[12I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}%
 \>[13I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaKeyword{pattern}\<[14I]%
-\>[14I]\AgdaInductiveConstructor{three}\<[15I]%
-\>[15I]\AgdaSymbol{=}\<[16I]%
-\>[16I]\AgdaInductiveConstructor{suc}\<[17I]%
+\>[0]\AgdaKeyword{pattern}%
+\>[14I]\AgdaInductiveConstructor{three}%
+\>[15I]\AgdaSymbol{=}%
+\>[16I]\AgdaInductiveConstructor{suc}%
 \>[17I]\AgdaInductiveConstructor{two}\<%
 \\
-\>[0]\AgdaKeyword{pattern}\<[18I]%
-\>[18I]\AgdaInductiveConstructor{four}\<[14]%
-\>[14]\AgdaSymbol{=}\<[19I]%
-\>[19I]\AgdaInductiveConstructor{suc}\<[20I]%
+\>[0]\AgdaKeyword{pattern}%
+\>[18I]\AgdaInductiveConstructor{four}%
+\>[14]\AgdaSymbol{=}%
+\>[19I]\AgdaInductiveConstructor{suc}%
 \>[20I]\AgdaInductiveConstructor{three}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{pattern}\<[21I]%
-\>[21I]\AgdaInductiveConstructor{five}\<[14]%
-\>[14]\AgdaSymbol{=}\<[22I]%
-\>[22I]\AgdaInductiveConstructor{suc}\<[23I]%
+\>[0]\AgdaKeyword{pattern}%
+\>[21I]\AgdaInductiveConstructor{five}%
+\>[14]\AgdaSymbol{=}%
+\>[22I]\AgdaInductiveConstructor{suc}%
 \>[23I]\AgdaInductiveConstructor{four}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}\<[24I]%
-\>[24I]\AgdaDatatype{Bot}\<[25I]%
-\>[25I]\AgdaSymbol{:}\<[26I]%
-\>[26I]\AgdaPrimitiveType{Set}\<[27I]%
+\>[0]\AgdaKeyword{data}%
+\>[24I]\AgdaDatatype{Bot}%
+\>[25I]\AgdaSymbol{:}%
+\>[26I]\AgdaPrimitiveType{Set}%
 \>[27I]\AgdaKeyword{where}\<%
 \end{code}
 
