--- a/test/LaTeXAndHTML/succeed/Relative-indentation.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.tex
@@ -7,46 +7,46 @@
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{A}\<[5]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{A}%
 \>[5]\AgdaPostulate{B}\<%
 \\
-\>[5][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaPostulate{C}\<[0I]%
-\>[0I]\AgdaSymbol{:}\<[1I]%
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaPostulate{C}%
+\>[0I]\AgdaSymbol{:}%
 \>[1I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{D}\<[5]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{D}%
 \>[5]\AgdaPostulate{E}\<%
 \\
 %
 \\
-\>[5][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaPostulate{F}\<[2I]%
-\>[2I]\AgdaSymbol{:}\<[3I]%
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaPostulate{F}%
+\>[2I]\AgdaSymbol{:}%
 \>[3I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{G}\<[5]%
-\>[5]\AgdaPostulate{H}\<[8]%
-\>[8]\AgdaSymbol{:}\<[4I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{G}%
+\>[5]\AgdaPostulate{H}%
+\>[8]\AgdaSymbol{:}%
 \>[4I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaPostulate{I}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaPostulate{J}\<[5I]%
-\>[5I]\AgdaSymbol{:}\<[6I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaPostulate{J}%
+\>[5I]\AgdaSymbol{:}%
 \>[6I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
@@ -54,31 +54,31 @@
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{K}\<[5]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{K}%
 \>[5]\AgdaPostulate{L}\<%
 \end{code}
 \begin{code}%
-\>[5][@{}l@{\AgdaIndent{1}}]\<[6]%
-\>[6]\AgdaPostulate{M}\<[7I]%
-\>[7I]\AgdaSymbol{:}\<[8I]%
+\>[5][@{}l@{\AgdaIndent{1}}]%
+\>[6]\AgdaPostulate{M}%
+\>[7I]\AgdaSymbol{:}%
 \>[8I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaMultiCode}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record}\<[9I]%
-\>[9I]\AgdaRecord{R}\<[10I]%
-\>[10I]\AgdaSymbol{:}\<[11I]%
-\>[11I]\AgdaPrimitiveType{Set₁}\<[12I]%
+\>[0]\AgdaKeyword{record}%
+\>[9I]\AgdaRecord{R}%
+\>[10I]\AgdaSymbol{:}%
+\>[11I]\AgdaPrimitiveType{Set₁}%
 \>[12I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{field}\<[13I]%
-\>[13I]\AgdaField{N}\<[14I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{field}%
+\>[13I]\AgdaField{N}%
 \>[14I]\AgdaSymbol{:}\<%
 \\
-\>[14I][@{}l@{\AgdaIndent{0}}]\<[12]%
+\>[14I][@{}l@{\AgdaIndent{0}}]%
 \>[12]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
@@ -87,23 +87,23 @@
 
 \begin{AgdaAlign}
 text \begin{code}%
-\>[0]\AgdaKeyword{module}\<[15I]%
-\>[15I]\AgdaModule{\_}\<[16I]%
+\>[0]\AgdaKeyword{module}%
+\>[15I]\AgdaModule{\_}%
 \>[16I]\AgdaKeyword{where}\<%
 \end{code} more text
     also text  \begin{code}%
-\>[0][@{}l@{\AgdaIndent{1}}]\<[4]%
-\>[4]\AgdaKeyword{postulate}\<[17I]%
-\>[17I]\AgdaPostulate{O}\<[18I]%
-\>[18I]\AgdaSymbol{:}\<[19I]%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[4]\AgdaKeyword{postulate}%
+\>[17I]\AgdaPostulate{O}%
+\>[18I]\AgdaSymbol{:}%
 \>[19I]\AgdaPrimitiveType{Set}\<%
 \end{code} text again
 
  text          \begin{code}%
-\>[0][@{}l@{\AgdaIndent{2}}]\<[4]%
-\>[4]\AgdaKeyword{postulate}\<[20I]%
-\>[20I]\AgdaPostulate{o}\<[21I]%
-\>[21I]\AgdaSymbol{:}\<[22I]%
+\>[0][@{}l@{\AgdaIndent{2}}]%
+\>[4]\AgdaKeyword{postulate}%
+\>[20I]\AgdaPostulate{o}%
+\>[21I]\AgdaSymbol{:}%
 \>[22I]\AgdaPostulate{O}\<%
 \end{code}   text             
 \end{AgdaAlign}
@@ -111,86 +111,86 @@ text \begin{code}%
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[1]%
-\>[1]\AgdaPostulate{P}\<[23I]%
-\>[23I]\AgdaSymbol{:}\<[24I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[1]\AgdaPostulate{P}%
+\>[23I]\AgdaSymbol{:}%
 \>[24I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[25I]%
-\>[25I]\AgdaModule{\_}\<[26I]%
+\>[0]\AgdaKeyword{module}%
+\>[25I]\AgdaModule{\_}%
 \>[26I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[1]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[1]\AgdaKeyword{postulate}\<%
 \\
-\>[1][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{Q}\<[27I]%
-\>[27I]\AgdaSymbol{:}\<[28I]%
+\>[1][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{Q}%
+\>[27I]\AgdaSymbol{:}%
 \>[28I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[29I]%
-\>[29I]\AgdaModule{\_}\<[30I]%
+\>[0]\AgdaKeyword{module}%
+\>[29I]\AgdaModule{\_}%
 \>[30I]\AgdaKeyword{where}\<%
 \\
 \>[29I][@{}l@{\AgdaIndent{0}}]\<[30I]%
 \>[9]\AgdaKeyword{postulate}\<%
 \\
-\>[9][@{}l@{\AgdaIndent{0}}]\<[10]%
-\>[10]\AgdaPostulate{S}\<[31I]%
-\>[31I]\AgdaSymbol{:}\<[32I]%
+\>[9][@{}l@{\AgdaIndent{0}}]%
+\>[10]\AgdaPostulate{S}%
+\>[31I]\AgdaSymbol{:}%
 \>[32I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{AgdaMultiCode}{2}
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[33I]%
-\>[33I]\AgdaModule{\_}\<[34I]%
+\>[0]\AgdaKeyword{module}%
+\>[33I]\AgdaModule{\_}%
 \>[34I]\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
-\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaKeyword{postulate}\<[35I]%
-\>[35I]\AgdaPostulate{T}\<[36I]%
-\>[36I]\AgdaSymbol{:}\<[37I]%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaKeyword{postulate}%
+\>[35I]\AgdaPostulate{T}%
+\>[36I]\AgdaSymbol{:}%
 \>[37I]\AgdaPrimitiveType{Set}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[35I]%
-\>[12]\AgdaPostulate{U}\<[38I]%
-\>[38I]\AgdaSymbol{:}\<[39I]%
+\>[12]\AgdaPostulate{U}%
+\>[38I]\AgdaSymbol{:}%
 \>[39I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaMultiCode}
 
 \begin{AgdaSuppressSpace}{2}
 \begin{code}%
-\>[0]\AgdaKeyword{module}\<[40I]%
-\>[40I]\AgdaModule{\_}\<[41I]%
+\>[0]\AgdaKeyword{module}%
+\>[40I]\AgdaModule{\_}%
 \>[41I]\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
-\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaKeyword{postulate}\<[42I]%
-\>[42I]\AgdaPostulate{V}\<[43I]%
-\>[43I]\AgdaSymbol{:}\<[44I]%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaKeyword{postulate}%
+\>[42I]\AgdaPostulate{V}%
+\>[43I]\AgdaSymbol{:}%
 \>[44I]\AgdaPrimitiveType{Set}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[42I]%
-\>[12]\AgdaPostulate{W}\<[45I]%
-\>[45I]\AgdaSymbol{:}\<[46I]%
+\>[12]\AgdaPostulate{W}%
+\>[45I]\AgdaSymbol{:}%
 \>[46I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaSuppressSpace}
 
 \begin{code}%
-\>[0]\AgdaFunction{X}\<[47I]%
-\>[47I]\AgdaSymbol{:}\<[48I]%
+\>[0]\AgdaFunction{X}%
+\>[47I]\AgdaSymbol{:}%
 \>[48I]\AgdaPrimitiveType{Set₁}\<%
 \\
-\>[0]\AgdaFunction{X}\<[49I]%
+\>[0]\AgdaFunction{X}%
 \>[49I]\AgdaSymbol{=}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[49I]%
@@ -198,27 +198,27 @@ text \begin{code}%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaFunction{Y}\<[50I]%
-\>[50I]\AgdaSymbol{:}\<[51I]%
+\>[0]\AgdaFunction{Y}%
+\>[50I]\AgdaSymbol{:}%
 \>[51I]\AgdaPrimitiveType{Set₁}\<%
 \\
-\>[0]\AgdaFunction{Y}\<[52I]%
-\>[52I]\AgdaSymbol{=}\<[10]%
+\>[0]\AgdaFunction{Y}%
+\>[52I]\AgdaSymbol{=}%
 \>[10]\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{Zzzzzzzzz}\<[53I]%
-\>[53I]\AgdaSymbol{:}\<[54I]%
-\>[54I]\AgdaPrimitiveType{Set}\<[55I]%
-\>[55I]\AgdaSymbol{→}\<[56I]%
+\>[0]\AgdaFunction{Zzzzzzzzz}%
+\>[53I]\AgdaSymbol{:}%
+\>[54I]\AgdaPrimitiveType{Set}%
+\>[55I]\AgdaSymbol{→}%
 \>[56I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[0]\AgdaFunction{Zzzzzzzzz}\<[57I]%
+\>[0]\AgdaFunction{Zzzzzzzzz}%
 \>[57I]\AgdaBound{X}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[57I]%
-\>[10]\AgdaSymbol{=}\<[58I]%
+\>[10]\AgdaSymbol{=}%
 \>[58I]\AgdaBound{X}\<%
 \end{code}
 
