--- a/test/LaTeXAndHTML/succeed/UnicodeDeclare.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeDeclare.tex
@@ -14,8 +14,8 @@
 \begin{code}%
 \>[0]\AgdaComment{{-}{-} ◯ = Set}\<%
 \\
-\>[0]\AgdaFunction{◯}\<[0I]%
-\>[0I]\AgdaSymbol{=}\<[1I]%
+\>[0]\AgdaFunction{◯}%
+\>[0I]\AgdaSymbol{=}%
 \>[1I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
