--- a/test/LaTeXAndHTML/succeed/UnicodeInput.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.tex
@@ -3,19 +3,19 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}\<[0I]%
-\>[0I]\AgdaDatatype{αβγδεζθικλμνξρστυφχψω}\<[1I]%
-\>[1I]\AgdaSymbol{:}\<[2I]%
-\>[2I]\AgdaPrimitiveType{Set₁}\<[3I]%
+\>[0]\AgdaKeyword{data}%
+\>[0I]\AgdaDatatype{αβγδεζθικλμνξρστυφχψω}%
+\>[1I]\AgdaSymbol{:}%
+\>[2I]\AgdaPrimitiveType{Set₁}%
 \>[3I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{→⇒⇛⇉⇄↦⇨↠⇀⇁}\<[4I]%
-\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{→⇒⇛⇉⇄↦⇨↠⇀⇁}%
+\>[4I]\AgdaSymbol{:}%
 \>[5I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
